# i3-arch-whisper-dictate

./: .env.example  .gitignore  AGENTS.md  README.md  generate_run_script.sh  main.py  pyproject.toml  requirements.txt  run_whisper_dictate.sh  run_whisper_dictate.sh.md  setup.py  setup_i3.sh  toggle_dictate.py
.github/workflows/: ci.yml  integration.yml
.memories/: pytest-thread-hang-debugging.md
.specify/memory/: constitution.md
docs/adr/: 0001-mock-factory-pattern-for-async-resources.md  0002-dependency-injection-for-services.md  README.md
openspec/changes/archive/2025-03-12-fix-notification-persistent-dismiss/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-03-12-fix-notification-persistent-dismiss/specs/001-persistent-notification/: spec.md
openspec/changes/archive/2026-03-26-fix-test-suite-hanging/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-26-fix-test-suite-hanging/specs/test-fixture-asyncio/: spec.md
openspec/changes/archive/2026-03-26-mp3-audio-support/: README.md  design.md  tasks.md
openspec/changes/archive/2026-03-26-mp3-audio-support/specs/mp3-audio-conversion/: spec.md
openspec/changes/archive/2026-03-26-persistence/specs/audio-storage/: spec.md
openspec/changes/archive/2026-03-26-persistence/specs/database-persistence/: spec.md
openspec/changes/archive/2026-04-02-sync-sqlite3-migration/: design.md  rollback.md  tasks.md
openspec/changes/archive/2026-04-02-sync-sqlite3-migration/specs/002-database-persistence/: spec.md
openspec/changes/ci-cd-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/ci-cd-pipeline/specs/ci-workflow/: spec.md
openspec/changes/ci-cd-pipeline/specs/hybrid-testing/: spec.md
openspec/changes/ci-cd-pipeline/specs/test-matrix/: spec.md
openspec/changes/fix-test-suite-hanging/: tasks.md
openspec/changes/mp3-audio-support/: proposal.md  tasks.md
openspec/changes/persistence/: design.md  proposal.md  tasks.md
openspec/changes/persistence/specs/database-persistence/: spec.md
openspec/changes/persistence/specs/state-migration/: spec.md
openspec/changes/persistence/specs/structured-logging/: spec.md
openspec/changes/persistence/specs/transcript-history/: spec.md
openspec/changes/sync-sqlite3-migration/: design.md  proposal.md  tasks.md
openspec/changes/sync-sqlite3-migration/specs/002-database-persistence/: spec.md
openspec/changes/sync-sqlite3-migration/specs/sync-database-operations/: spec.md
openspec/specs/001-persistent-notification/: spec.md
openspec/specs/002-database-persistence/: spec.md
openspec/specs/006-state-migration/: spec.md
openspec/specs/007-mp3-audio-conversion/: spec.md
openspec/specs/008-test-infrastructure/: spec.md
specs/001-persistent-notification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-persistent-notification/checklists/: requirements.md
specs/002-streaming-transcription/: spec.md
specs/002-streaming-transcription/checklists/: requirements.md
tests/: conftest.py  test_audio.py  test_audio_converter.py  test_audio_converter_integration.py  test_audio_storage.py  test_cli_database_lifecycle.py  test_cli_helpers.py  test_clipboard.py  test_database_update.py  test_dictation.py  test_history.py  test_integration.py  test_notifications.py  test_toggle_dictate.py  test_transcription.py
tests/fixtures/: README.md  create_test_audio.py
whisper_dictate/: __init__.py  __main__.py  audio.py  audio_converter.py  audio_storage.py  cli.py  cli_helpers.py  clipboard.py  config.py  database.py  db_logging.py  dictation.py  dunst_monitor.py  migration.py  notifications.py  transcription.py
whisper_dictate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
whisper_dictate/db/: __init__.py
whisper_dictate/providers/: __init__.py  openai_compatible.py
