[project]
name = "whisper-dictate"
version = "0.1.0"
description = "Voice dictation tool with Whisper API integration"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydub==0.25.1",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "aiosqlite>=0.20.0",
    "pytest-timeout>=2.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
timeout = 30
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "asyncio: mark test as an asyncio test",
    "timeout: mark test with specific timeout override",
]

[tool.coverage.run]
source = ["whisper_dictate"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
