[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper-dictate"
version = "0.1.0"
description = "Voice dictation using OpenAI Whisper API with strong typing and logging"
requires-python = ">=3.11"
authors = [{name = "whisper-dictate contributors"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydub==0.25.1",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "pytest-timeout>=2.2.0",
]

[project.scripts]
whisper-dictate = "whisper_dictate.cli:cli"

[tool.pytest.ini_options]
timeout = 30
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "timeout: mark test with specific timeout override",
    "integration: mark test as an integration test",
]

[tool.coverage.run]
source = ["whisper_dictate"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
